--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -21,8 +21,8 @@ Investigating effort and cost is challenging because “effort is not a property
 
 One task that is often used to investigate effort is the n-back task. <!-- Satz war sehr lang, ich ihn aufgeteilt und etwas umgestellt -->
 In this working memory task, a continuous stream of stimuli, e.g. letters, is presented on screen. <!-- zweiter Teilsatz -->
-Participants indicate via button press whether the current stimulus is the same as *n* stimuli before, with *n* being the level of difficulty between one and six [@Mackworth1959]. <!-- dritter Teilsatz-->
-It requires simultaneous storage of past stimuli and processing of new stimuli [@Jonides1997], and participants are asked to respond as quickly and as accurately as they can.
+Participants indicate via button press whether the current stimulus is the same as *n* stimuli before, with *n* being the level of difficulty between one and six [@Mackworth1959]; and are asked to respond as quickly and as accurately as they can. <!-- dritter Teilsatz-->
+It requires simultaneous storage of past stimuli and processing of new stimuli [@Jonides1997]. <!-- Teilsatz nach dem Komma wirkt etwas out of place: der erste Teil beschäftigt sich mit cognitiven Anforderungen an die Teilnehmenden, der zweite aber mit einem Auftrag an die Probanden; Deshalb habe ich den Satz aufgeteilt und den zweiten Teil mit dem ersten verbunden -->
 The n-back task is well suited to investigate effort because it is an almost continuous manipulation of task load, as has been shown by monotonic increases in error rates and reaction times [@Jaeggi2010] as well as monotonic increases in brain activity in areas associated with working memory [@Jonides1997; @Owen2005].
 However, reliability measures of the n-back task are mixed, presumably due to ceiling effects in performance in the easiest level, causing inconsistent associations of n-back performance and measures such as executive functioning and fluid intelligence [@Jaeggi2010].
 
