--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -24,7 +24,7 @@ In this working memory task, a continuous stream of stimuli, e.g. letters, is pr
 Participants indicate via button press whether the current stimulus is the same as *n* stimuli before, with *n* being the level of difficulty between one and six [@Mackworth1959]; and are asked to respond as quickly and as accurately as they can. <!-- dritter Teilsatz-->
 It requires simultaneous storage of past stimuli and processing of new stimuli [@Jonides1997]. <!-- Teilsatz nach dem Komma wirkt etwas out of place: der erste Teil beschäftigt sich mit cognitiven Anforderungen an die Teilnehmenden, der zweite aber mit einem Auftrag an die Probanden; Deshalb habe ich den Satz aufgeteilt und den zweiten Teil mit dem ersten verbunden -->
 The n-back task is well suited to investigate effort because it is an almost continuous manipulation of task load, as has been shown by monotonic increases in error rates and reaction times [@Jaeggi2010] as well as monotonic increases in brain activity in areas associated with working memory [@Jonides1997; @Owen2005].
-However, reliability measures of the n-back task are mixed, presumably due to ceiling effects in performance in the easiest level, causing inconsistent associations of n-back performance and measures such as executive functioning and fluid intelligence [@Jaeggi2010].
+However, reliability measures of the n-back task are mixed, presumably due to ceiling effects in performance in the easiest level, causing inconsistent associations of n-back performance and measures such as executive functioning and fluid intelligence [@Jaeggi2010]. <!-- Ist hier als Reliabilität die Korrelation zum Außenkriterium gemeint (EF und gf?); Falls nicht, wären doch fehlende Reliabilitäten und Korrelationen zwei verschiedene Punkte-->
 
 A way to quantify the subjective cost of each n-back level has been developed by Westbrook et al. [-@Westbrook2013], called the Cognitive Effort Discounting Paradigm (COG-ED).
 First, the participants complete n-back level one to six to familiarize themselves with the task.
