--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -38,7 +38,7 @@ Younger participants showed lower effort discounting, i.e. they needed a lower m
 
 ## Effort discounting and need for cognition 
 <!-- denke eine Zwischenüberschrift könnte das noch etwas deutlicher unterteilen-->
-The AUC in the study by Westbrook et al. [-@Westbrook2013] was also associated with the participants' Need for Cognition (NFC) score, a personality trait describing individuals who actively seek and enjoy effortful cognitive activities [@Cacioppo1982].
+The AUC in the study by Westbrook et al. [-@Westbrook2013] was also associated with the participants' Need for Cognition (NFC) score, a personality trait describing individuals who actively seek and enjoy effortful cognitive activities [@Cacioppo1982]. <!-- Eventuell könnte man als Anfang für diesen Abschnitt nochmal kurz NFC definieren (zweiter Teilsatz) und kurz sagen, womit das assoziiert ist... also vor allem mit Traits, die danach klingen, als könnte Effort Discounting eine Rolle spielen; Dann mit Westbrook in Verbindung bringen, aber vielleicht nicht von der AUC reden, sondern lieber wieder von Effort Discounting? -->
 On the surface, this association stands to reason, as individuals with higher NFC are more motivated to mobilize cognitive effort because they perceive it as intrinsically rewarding.
 However, the relation of NFC and SVs might be confounded with task performance itself, since subjective task values have been shown to depend on both the exerted effort [@Wang2017] and the expected performance [@Yee2021].
 Findings on NFC and n-back performance are heterogenous.
