--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -10619,7 +10619,7 @@ CONCLUSION: Both studies add to more recent findings that shape the understandin
 @Article{Westbrook2013,
   author     = {Westbrook, Andrew and Kester, Daria and Braver, Todd S.},
   journal    = {PLOS ONE},
-  title      = {What {Is} the {Subjective} {Cost} of {Cognitive} {Effort}? {Load}, {Trait}, and {Aging} {Effects} {Revealed} by {Economic} {Preference}},
+  title      = {What is the subjective cost of cognitive effort? {Load}, trait, and aging effects revealed by economic preference},
   year       = {2013},
   issn       = {1932-6203},
   month      = jul,
